syntax = "proto3";

package audit.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/api/annotations.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/duration.proto";

import "pagination/v1/pagination.proto";


// 权限变更审计日志服务
service PermissionAuditLogService {
  // 查询权限变更审计日志列表
  rpc List (pagination.PagingRequest) returns (ListPermissionAuditLogResponse) {}

  // 查询权限变更审计日志详情
  rpc Get (GetPermissionAuditLogRequest) returns (PermissionAuditLog) {}

  // 创建权限变更审计日志
  rpc Create (CreatePermissionAuditLogRequest) returns (google.protobuf.Empty) {}
}

// 权限变更审计日志
message PermissionAuditLog {
  // 变更动作
  enum ActionType {
    ACTION_TYPE_UNSPECIFIED = 0;

    GRANT = 1;    // 授予权限/角色
    REVOKE = 2;   // 回收权限/角色
    UPDATE = 3;   // 修改权限属性(如过期时间、条件约束)
    RESET = 4;    // 重置权限

    CREATE = 5;       // 创建角色/权限模板等资源
    DELETE = 6;       // 删除角色/权限资源
    ASSIGN = 7;       // 分配（将角色/权限指派给用户/组）
    UNASSIGN = 8;     // 取消分配
    BULK_GRANT = 9;   // 批量授予
    BULK_REVOKE = 10; // 批量回收
    EXPIRE = 11;      // 权限到期失效（系统自动）
    SUSPEND = 12;     // 暂停/冻结权限
    RESUME = 13;      // 恢复已暂停的权限
    ROLLBACK = 14;    // 回滚先前的变更

    OTHER = 100;      // 其他未分类操作
  }

  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = {description: "权限变更审计日志ID"}
  ]; // 权限变更审计日志ID

  optional uint32 tenant_id = 2 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "租户ID"}
  ];  // 租户ID

  optional uint32 operator_id = 3 [
    json_name = "operatorId",
    (gnostic.openapi.v3.property) = {description: "操作者用户ID"}
  ]; // 操作者用户ID

  optional string operator_name = 4 [
    json_name = "operatorName",
    (gnostic.openapi.v3.property) = {description: "操作者用户名"}
  ]; // 操作者用户名


  optional string target_type = 10 [
    json_name = "targetType",
    (gnostic.openapi.v3.property) = {description: "目标类型"}
  ]; // 目标类型

  optional string target_id = 11 [
    json_name = "targetId",
    (gnostic.openapi.v3.property) = {description: "目标ID"}
  ]; // 目标ID

  optional string target_name = 12 [
    json_name = "targetName",
    (gnostic.openapi.v3.property) = {description: "目标名称"}
  ]; // 目标名称


  optional ActionType action = 20 [
    json_name = "action",
    (gnostic.openapi.v3.property) = {description: "变更动作"}
  ]; // 变更动作


  optional string old_value = 30 [
    json_name = "oldValue",
    (gnostic.openapi.v3.property) = {description: "旧值"}
  ]; // 旧值

  optional string new_value = 31 [
    json_name = "newValue",
    (gnostic.openapi.v3.property) = {description: "新值"}
  ]; // 新值


  optional string ip_address = 40 [
    json_name = "ipAddress",
    (gnostic.openapi.v3.property) = {description: "操作者IP地址"}
  ]; // 操作者IP地址

  optional string request_id = 41 [
    json_name = "requestId",
    (gnostic.openapi.v3.property) = {description: "关联全局请求ID"}
  ]; // 关联全局请求ID

  optional string reason = 42 [
    json_name = "reason",
    (gnostic.openapi.v3.property) = {description: "变更原因"}
  ]; // 变更原因

  // ========== 合规校验 ==========

  optional string log_hash = 50 [
    json_name = "logHash",
    (gnostic.openapi.v3.property).description = "日志内容哈希（SHA256，十六进制字符串）"
  ]; // 日志哈希

  optional bytes signature = 51 [
    json_name = "signature",
    (gnostic.openapi.v3.property).description = "日志数字签名（ECDSA，签名内容：tenant_id+user_id+created_at+log_hash）"
  ]; // 日志数字签名

  // ========== 时间字段 ==========

  optional google.protobuf.Timestamp created_at = 60 [
    json_name = "createdAt",
    (gnostic.openapi.v3.property) = {description: "日志创建时间"}
  ];// 日志创建时间
}

// 查询权限变更审计日志列表 - 回应
message ListPermissionAuditLogResponse {
  repeated PermissionAuditLog items = 1;
  uint64 total = 2;
}

// 查询权限变更审计日志详情 - 请求
message GetPermissionAuditLogRequest {
  oneof query_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "ID", read_only: true},
      json_name = "id"
    ]; // ID
  }

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "视图字段过滤器，用于控制返回的字段"
    }
  ]; // 视图字段过滤器，用于控制返回的字段
}

// 创建权限变更审计日志 - 请求
message CreatePermissionAuditLogRequest {
  PermissionAuditLog data = 1;
}
