package service

import (
	"context"

	"github.com/go-kratos/kratos/v2/log"
	paginationV1 "github.com/tx7do/go-crud/api/gen/go/pagination/v1"
	"github.com/tx7do/kratos-bootstrap/bootstrap"
	"google.golang.org/protobuf/types/known/emptypb"

	"go-wind-cms/app/core/service/internal/data"

	auditV1 "go-wind-cms/api/gen/go/audit/service/v1"
)

type PermissionAuditLogService struct {
	auditV1.UnimplementedPermissionAuditLogServiceServer

	log *log.Helper

	policyEvaluationLogRepo *data.PermissionAuditLogRepo
}

func NewPermissionAuditLogService(
	ctx *bootstrap.Context,
	policyEvaluationLogRepo *data.PermissionAuditLogRepo,
) *PermissionAuditLogService {
	return &PermissionAuditLogService{
		log:                     ctx.NewLoggerHelper("permission-audit-log/service/core-service"),
		policyEvaluationLogRepo: policyEvaluationLogRepo,
	}
}

func (s *PermissionAuditLogService) List(ctx context.Context, req *paginationV1.PagingRequest) (*auditV1.ListPermissionAuditLogResponse, error) {
	resp, err := s.policyEvaluationLogRepo.List(ctx, req)
	if err != nil {
		return nil, err
	}

	return resp, nil
}

func (s *PermissionAuditLogService) Get(ctx context.Context, req *auditV1.GetPermissionAuditLogRequest) (*auditV1.PermissionAuditLog, error) {
	resp, err := s.policyEvaluationLogRepo.Get(ctx, req)
	if err != nil {
		return nil, err
	}

	return resp, nil
}

func (s *PermissionAuditLogService) Create(ctx context.Context, req *auditV1.CreatePermissionAuditLogRequest) (*emptypb.Empty, error) {
	if req.Data == nil {
		return nil, auditV1.ErrorBadRequest("invalid parameter")
	}

	if err := s.policyEvaluationLogRepo.Create(ctx, req); err != nil {
		return nil, err
	}

	return &emptypb.Empty{}, nil
}
